Fixed overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,7 @@ a:active {
   filter: blur(3px);
 }
 
-svg {
+.shapes svg {
   overflow: visible;
 }
 
